--- a/env.dev.sample
+++ b/env.dev.sample
@@ -1,8 +1,8 @@
 # Dummy values used for local development
 DEBUG=True
 POSTGRES_DB_PASSWORD=password
-POSTGRES_DB_USER=user
-POSTGRES_DB_NAME=dbname
-POSTGRES_DB_PORT=dbport
-POSTGRES_DB_HOST=dbhost
+POSTGRES_DB_USER=postgres
+POSTGRES_DB_NAME=postgres
+POSTGRES_DB_PORT=5432
+POSTGRES_DB_HOST=db
 DJANGO_SECRET_KEY='django-insecure-c6##^=%byi^#f##fl)n+9nwtkr!j*1881ueo#+gi=l(a@@(k#w'
