Add encryption to api key fields

--- a/env.dev.sample
+++ b/env.dev.sample
@@ -1,4 +1,5 @@
 # Dummy values used for local development
+# Encryption docs: https://cryptography.io/en/latest/fernet/
 DEBUG=True
 POSTGRES_DB_PASSWORD=password
 POSTGRES_DB_USER=postgres
@@ -6,3 +7,4 @@ POSTGRES_DB_NAME=postgres
 POSTGRES_DB_PORT=5432
 POSTGRES_DB_HOST=db
 DJANGO_SECRET_KEY='django-insecure-c6##^=%byi^#f##fl)n+9nwtkr!j*1881ueo#+gi=l(a@@(k#w'
+ENCRYPTION_KEY=myencryptionkey
