--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,14 @@ build==1.2.2
     # via pip-tools
 certifi==2024.8.30
     # via requests
+cffi==1.17.1
+    # via cryptography
 charset-normalizer==3.3.2
     # via requests
 click==8.1.7
     # via pip-tools
+cryptography==43.0.1
+    # via -r requirements.in
 django==4.2.16
     # via
     #   -r requirements.in
@@ -28,6 +32,8 @@ pip-tools==6.13.0
     # via -r requirements.in
 psycopg2-binary==2.9.9
     # via -r requirements.in
+pycparser==2.22
+    # via cffi
 pyproject-hooks==1.1.0
     # via build
 requests==2.32.3
